# daemon-cpp

./: .drone.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeSettings.json  GDaemon.cbp  LICENSE  README.md  appveyor.yml  build-centos-7.sh  build-deb.sh  build-debian-buster.sh  build-debian-jessie.sh  build-debian-sid.sh  build-debian-stretch.sh  build-debian-wheezy.sh  build-linux.sh  build-ubuntu-bionic.sh  build-ubuntu-cosmic.sh  build-ubuntu-precise.sh  build-ubuntu-trusty.sh  build-ubuntu-xenial.sh  config.cpp  config.h  consts.h  control_linux.cpp  control_windows.cpp  daemon.cfg  daemon.cpp  daemon_server.cpp  daemon_server.h  db.cpp  db.h  dl.h  file_server.cpp  file_server.h  gdaemon.cfg  status.cpp  status.h  (+1 more)
build_scripts/: README.md  build-arch-linux.sh  build-centos-7.sh  build-debian-buster.sh  build-debian-jessie.sh  build-debian-sid.sh  build-debian-stretch.sh  build-debian-wheezy.sh  build-linux.sh  build-ubuntu-bionic.sh  build-ubuntu-cosmic.sh  build-ubuntu-precise.sh  build-ubuntu-trusty.sh  build-ubuntu-xenial.sh
classes/: dedicated_server.cpp  dedicated_server.h  game_server.cpp  game_server.h  tasks.cpp  tasks.h
components/server/: commands_component.cpp  file_server.h  files_component.cpp  files_component.h
db/: CMakeLists.txt  Makefile  db.cpp  db.h  mysql.cpp  mysql.h
functions/: auth.cpp  gcrypt.cpp  gcrypt.h  gfiles.cpp  gstring.cpp  gstring.h  gsystem.cpp  gsystem.h  parse_config.cpp  restapi.cpp  restapi.h
models/: tasks.cpp  tasks.h
src/: CMakeLists.txt  config.cpp  config.h  consts.h  control_linux.cpp  control_windows.cpp  daemon.cpp  daemon_server.cpp  daemon_server.h  log.h  state.cpp  state.h  status.cpp  status.h  typedefs.h
src/classes/: cmd_output.cpp  cmd_output.h  crypto.cpp  dedicated_server.cpp  dedicated_server.h  game_server.cpp  game_server.h  game_server_cmd.cpp  game_server_cmd.h  game_server_installer.cpp  game_server_installer.h  game_servers_list.cpp  game_servers_list.h  gdaemon_tasks.cpp  gdaemon_tasks.h  servers_tasks.cpp  servers_tasks.h  task_list.cpp  task_list.h  tasks.cpp  tasks.h
src/commands/: cmd.h  dedicated_server_cmd.cpp  dedicated_server_cmd.h  game_server_cmd.cpp  game_server_cmd.h  game_server_installer.cpp  game_server_installer.h
src/commands/output/: base_output.h  cmd_output.cpp  cmd_output.h  ipc_cmd_output.cpp  ipc_cmd_output.h
src/components/server/: commands_component.cpp  commands_component.h  files_component.cpp  files_component.h  status_component.cpp  status_component.h
src/functions/: auth.cpp  auth.h  gfiles.cpp  gfiles.h  gstring.cpp  gstring.h  gsystem.cpp  gsystem.h  parse_config.cpp  parse_config.h  restapi.cpp  restapi.h
src/models/: game.h  game_mod.h  gdaemon_task.h  server.h  server_task.h
tests/: CMakeLists.txt  error_cmd.sh  execute_cmd.sh  run_tests.cpp  sleep_cmd.sh  status_vars.cpp
tests/client/: Makefile  client.cpp  client_readdir.cpp  client_sendfiles.cpp
tests/functional/: CMakeLists.txt  common.cpp  functional.cpp  tasks.cpp
tests/functional/mocks/: config_mock.cpp  restapi_mock.cpp
tests/mocks/: restapi_mock.cpp
tests/mocks/functions/: gsystem.cpp
tests/rest_responses/: ds_initial.json  server1.json  server2.json  servers.json
tests/unit/: CMakeLists.txt  state_test.cpp
tests/unit/classes/: cmd_output_test.cpp  game_server_installer_test.cpp  game_servers_list_test.cpp
tests/unit/commands/: dedicated_server_cmd_test.cpp  game_server_installer_test.cpp
tests/unit/commands/output/: cmd_output_test.cpp  ipc_cmd_output_test.cpp
tests/unit/functions/: gstring_test.cpp
